# realtime-ai-serve

./: .gitignore  CODE_EXAMPLES.md  CONTRIBUTING.md  FILE_SUMMARY.md  IMPLEMENTATION_DETAILS.md  INDEX.md  PACKAGE_STRUCTURE.md  PROJECT_OVERVIEW.txt  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark_client.py  serve_model.py
realtime_serve/: __init__.py  batch.py  middleware.py  models.py  server.py  stream.py  types.py
tests/: conftest.py  test_batch.py  test_middleware.py  test_models.py  test_stream.py  test_types.py
