[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-ai-serve"
version = "0.1.0"
description = "Low-latency streaming inference server for AI models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Anmol Dhingra"}]
keywords = ["ai", "inference", "streaming", "realtime", "serving", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Networking",
]

dependencies = [
    "aiohttp>=3.8.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
torch = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.urls]
Homepage = "https://github.com/anmoldhingra1/realtime-ai-serve"
Repository = "https://github.com/anmoldhingra1/realtime-ai-serve"
Issues = "https://github.com/anmoldhingra1/realtime-ai-serve/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
